🔧 Add notice comment count
